# Turing

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RESUME_MARKER.md  SECURITY.md  START_HERE.md  clippy.toml  market-main-verification.txt  rust-toolchain.toml
.github/: CODEOWNERS  agent-production-readiness-trigger  final-agent-production-readiness-trigger  native-ui-docs-retry-1.txt  native-ui-publication-trigger.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  engineering.yml
.github/scripts/: fix_wp002_epoch.py
.github/workflows/: blueprint-v1-validation.yml  bootstrap-repair.yml  bootstrap.yml  cleanup-main-verification.yml  cross-platform-presenter.yml  expand-bootstrap.yml  finalize-agent-production-readiness.yml  finalize-m0-build-foundation.yml  finalize-market-strategy-and-clean-branches.yml  finalize-native-ui-runtime-docs.yml  finalize-wp002.yml  fix-market-research-question-ids.yml  fix-wp002-clippy.yml  fix-wp002-process-epoch-from-issue.yml  fix-wp002-process-epoch-from-pr.yml  fix-wp002-process-epoch.yml  format-prototype.yml  harden-market-validator-main.yml  harden-wp002-audit.yml  implementation-plan-validation.yml  market-strategy-consistency.yml  market-strategy-expand.yml  market-validator-hardening.yml  merge-and-delete-all-branches.yml  professional-buildout-clean.yml  professional-buildout-expand.yml  professional-buildout-finalize.yml  publish-agent-production-readiness.yml  publish-native-ui-prebuild-docs-from-issue.yml  publish-research-wave3.yml  repository-validation.yml  research-wave2-expand.yml  research-wave4-expand.yml  verify-market-main.yml  (+3 more)
apps/turing-browser/: Cargo.toml  home.html
apps/turing-browser/src/: main.rs
apps/turing-nova/: Cargo.toml
apps/turing-nova/src/: main.rs
apps/turing-shell/: Cargo.toml
apps/turing-shell/src/: main.rs
blueprint-v1/: 03-language-and-dependency-strategy.md  04-system-architecture.md  05-web-engine.md  07-network-storage-media.md  18-source-bibliography.md  20-definition-of-done.md  22-research-program.md  README.md
bootstrap/: data.py  generate.py  part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09  part-10  part-11  trigger.txt
crates/turing-a11y/: Cargo.toml
crates/turing-a11y/src/: lib.rs
crates/turing-a11y/tests/: accessibility.rs
crates/turing-bench/: Cargo.toml
crates/turing-bench/src/: lib.rs  main.rs
crates/turing-build-info/: Cargo.toml
crates/turing-build-info/src/: lib.rs
crates/turing-chrome/: Cargo.toml
crates/turing-chrome/src/: lib.rs  tokens.rs
crates/turing-css/: Cargo.toml
crates/turing-css/src/: lib.rs
crates/turing-dom/: Cargo.toml
crates/turing-dom/src/: lib.rs
crates/turing-engine/: Cargo.toml
crates/turing-engine/examples/: cold_load.rs  embed_minimal.rs  jsx_demo.rs  nova_chrome_demo.html  nova_chrome_demo.rs  nova_extract.rs  nova_native.rs  render_page.rs
crates/turing-engine/examples/common/: mod.rs
crates/turing-engine/src/: lib.rs
crates/turing-engine/tests/: pipeline.rs
crates/turing-fuzz/: Cargo.toml
crates/turing-fuzz/src/: lib.rs
crates/turing-fuzz/tests/: fuzz.rs
crates/turing-gc/: Cargo.toml
crates/turing-gc/src/: lib.rs
crates/turing-html/: Cargo.toml
crates/turing-html/src/: lib.rs  tree.rs
crates/turing-input/: Cargo.toml
crates/turing-input/src/: lib.rs
crates/turing-input/tests/: routing.rs
crates/turing-ipc/: Cargo.toml
crates/turing-ipc/src/: envelope.rs  generated.rs  lib.rs  queue.rs  sequence.rs
crates/turing-js/: Cargo.toml
crates/turing-js/src/: lib.rs  regex.rs
crates/turing-kernel/: Cargo.toml
crates/turing-kernel/src/: lib.rs
crates/turing-layout/: Cargo.toml
crates/turing-layout/src/: lib.rs
crates/turing-paint/: Cargo.toml
crates/turing-paint/src/: lib.rs
crates/turing-raster/: Cargo.toml
crates/turing-raster/examples/: glyph_sheet.rs
crates/turing-raster/src/: font.rs  lib.rs
crates/turing-raster/tests/: raster.rs
crates/turing-runtime/: Cargo.toml
crates/turing-runtime/src/: lib.rs
crates/turing-types/: Cargo.toml
crates/turing-types/src/: lib.rs
crates/turing-ui-model/: Cargo.toml
crates/turing-ui-model/src/: lib.rs
crates/turing-webidl/: Cargo.toml
crates/turing-webidl/src/: lib.rs
crates/turing-webidl/tests/: bindings.rs  mutation.rs
design/: tokens.json
docs/: README.md  contributing.md  documentation-policy.md  performance-baselines.md  prototype.md  repository-map.md  research-log.md  security.md  start-here.md
prototype/: Cargo.toml  README.md
prototype/src/: agent.rs  main.rs  network.rs  process.rs  render.rs  tabs.rs
security/: dependencies.json  generated-code.json  native-code.json  provenance.json  unsafe-code.json
tools/: bootstrap.ps1  bootstrap.sh  capture_benchmark_browser_pins.py  check.ps1  check.sh  check_documentation_change.py  check_external_links.py  doctor.ps1  doctor.sh  generate_ipc.py  harden_market_validator.py  market_consistency_patch.py  professional_buildout_generator.py  research_wave3_generator.py  run_benchmark_browser_launch.py  run_benchmark_server_profile.py  run_benchmark_smoke.py  serve_benchmark_profile.py  serve_servo_local_compatibility_corpus.py  ui_runtime_docs_generator.py  validate_accessibility_sources.py  validate_adr_0009_evidence.py  validate_adr_0009_source_observations.py  validate_backup_ownership_gap.py  validate_backup_ownership_readiness_review.py  validate_benchmark_artifact_packages.py  validate_benchmark_browser_pin_capture.py  validate_benchmark_browser_pin_diagnostics.py  validate_benchmark_claim_bundles.py  validate_benchmark_competitor_local_installs.py  validate_benchmark_competitor_versions.py  validate_benchmark_corpus.py  validate_benchmark_hardware.py  validate_benchmark_launch_runners.py  validate_benchmark_manifests.py  validate_benchmark_network_profile.py  validate_benchmark_os_controls.py  validate_benchmark_readiness_review.py  validate_benchmark_resource_attribution.py  validate_benchmark_sources.py  (+60 more)
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+737 files in other folders)
