[workspace]
resolver = "3"
members = [
  # In members but not default-members: the laboratory presenter carries the
  # workspace's only external runtime dependencies (winit, softbuffer), and
  # the default build stays standard-library-only. Build it explicitly with
  # `cargo run -p turing-browser`.
  "apps/turing-browser",
  "apps/turing-shell",
  "crates/turing-a11y",
  "crates/turing-bench",
  "crates/turing-build-info",
  "crates/turing-chrome",
  "crates/turing-css",
  "crates/turing-dom",
  "crates/turing-engine",
  "crates/turing-fuzz",
  "crates/turing-gc",
  "crates/turing-html",
  "crates/turing-input",
  "crates/turing-ipc",
  "crates/turing-js",
  "crates/turing-layout",
  "crates/turing-kernel",
  "crates/turing-paint",
  "crates/turing-raster",
  "crates/turing-types",
  "crates/turing-webidl",
  "crates/turing-ui-model",
  "prototype",
  "tools/xtask",
]
default-members = [
  "apps/turing-shell",
  "crates/turing-a11y",
  "crates/turing-bench",
  "crates/turing-build-info",
  "crates/turing-chrome",
  "crates/turing-css",
  "crates/turing-dom",
  "crates/turing-engine",
  "crates/turing-fuzz",
  "crates/turing-gc",
  "crates/turing-html",
  "crates/turing-input",
  "crates/turing-ipc",
  "crates/turing-js",
  "crates/turing-layout",
  "crates/turing-kernel",
  "crates/turing-paint",
  "crates/turing-raster",
  "crates/turing-types",
  "crates/turing-webidl",
  "crates/turing-ui-model",
  "tools/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"
repository = "https://github.com/byronwade/Turing"
homepage = "https://github.com/byronwade/Turing"
authors = ["Turing contributors"]

[workspace.dependencies]
turing-build-info = { path = "crates/turing-build-info" }
turing-ipc = { path = "crates/turing-ipc" }
turing-kernel = { path = "crates/turing-kernel" }
turing-types = { path = "crates/turing-types" }
turing-ui-model = { path = "crates/turing-ui-model" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
debug = 1
overflow-checks = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
