[package]
name = "turing-architecture-prototype"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false
description = "Dependency-free executable model of Turing Browser architecture invariants"

[dependencies]

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
