[package]
name = "turing-nova"
description = "Native Turing desktop host for the interactive Nova shell prototype"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
