[package]
name = "turing-shell"
description = "M0 toolkit-neutral shell laboratory for Turing Browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-build-info.workspace = true
turing-ipc.workspace = true
turing-kernel.workspace = true
turing-types.workspace = true
turing-ui-model.workspace = true

[lints]
workspace = true
