[package]
name = "turing-build-info"
description = "Build identity and maturity metadata for Turing binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
