[package]
name = "turing-css"
description = "Turing-owned CSS parser, selector matching, and cascade for WP-008 and REQ-ENG-003"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[features]
# The engine's own DOM is one ElementTree implementation, not a requirement.
# Embedders matching against their own tree build with
# `default-features = false` and get a dependency-free selector engine.
default = ["html"]
html = ["dep:turing-html"]

[dependencies]
turing-html = { path = "../turing-html", optional = true }

[lints]
workspace = true
