[package]
name = "turing-gc"
description = "Turing-owned exact tracing garbage collector and Web IDL binding registry for WP-011 and REQ-JS-002/003"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
