[package]
name = "turing-html"
description = "Turing-owned HTML tokenizer for WP-006 and REQ-ENG-001"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
