[package]
name = "turing-ipc"
description = "Toolkit-neutral bounded IPC contracts for Turing processes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-types.workspace = true

[lints]
workspace = true
