[package]
name = "turing-js"
description = "Turing-owned ECMAScript lexer, parser, bytecode compiler, and interpreter for WP-010 and REQ-JS-001"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
