[package]
name = "turing-kernel"
description = "Capability, process identity, and IPC authorization model for Turing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-ipc.workspace = true
turing-types.workspace = true

[lints]
workspace = true
