[package]
name = "turing-layout"
description = "Turing-owned box generation, block layout, and display list for WP-009 and REQ-ENG-004/005"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-css = { path = "../turing-css" }
turing-html = { path = "../turing-html" }

[lints]
workspace = true
