[package]
name = "turing-layout"
description = "Turing-owned box generation, block layout, and display list for WP-009 and REQ-ENG-004/005"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[features]
# Layout is generic over turing-css's ElementTree. The engine's own DOM is one
# implementation; embedders lay out their own tree with default-features=false.
default = ["html"]
html = ["dep:turing-html", "turing-css/html"]

[dependencies]
turing-css = { path = "../turing-css", default-features = false }
turing-html = { path = "../turing-html", optional = true }

[lints]
workspace = true
