[package]
name = "turing-paint"
description = "CPU compositing painter: alpha, rounded corners, and anti-aliasing, diffed against the reference rasterizer where their domains overlap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-css = { path = "../turing-css", default-features = false }
turing-layout = { path = "../turing-layout", default-features = false }
turing-raster = { path = "../turing-raster" }

[lints]
workspace = true
