[package]
name = "turing-raster"
description = "Turing-owned CPU reference rasterizer for the display list, the M2 gate reference-raster output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-css = { path = "../turing-css", default-features = false }
turing-layout = { path = "../turing-layout", default-features = false }

[lints]
workspace = true
