[package]
name = "turing-types"
description = "Stable typed identities shared by Turing subsystems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
