[package]
name = "turing-ui-model"
description = "Toolkit-neutral shell state and typed commands for Turing browser chrome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
turing-types.workspace = true

[lints]
workspace = true
