[package]
name = "xtask"
description = "Repository bootstrap, doctor, and validation commands for Turing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true
